# document

./: orb_slam2:v1.0.txt  yolov5+orb .odt  学习.odt  常用指令.odt  接入yolov5.odt
00_converter_mask/: CMakeLists.txt  converter_mask.cpp
01_Visual_difference/: CMakeLists.txt  visual_difference.cpp
02_UNIX_socket/c++_client/: CMakeLists.txt  c++_client.cpp
02_UNIX_socket/py_server/: py_server.py
03_Edge_detection/: CMakeLists.txt  edge_detection.cpp
